stylesheet.css
html {
  font-size: 125%;
}

.header {
  display: flex;
  flex-flow: column;
  background-color: #F1B82D;
  margin-left: 20px;
  margin-right: 20px;
}

h1 {
  color: #000000;
  font-size: 20px;
  display: flex;
  margin-top: 10px;
  margin-bottom: 0;
  justify-content: center;
}

h2 {
  color: #000000;
  font-size: 15px;
  font-family: "Dancing Script", cursive;
  display: flex;
  margin-top: 0;
  margin-bottom: 10px;
  justify-content: center;
}

nav {
  background-color: #000000;
  margin-left: 20px;
  margin-right: 20px;
}

.nav li {
    display: flex;
    justify-content: center;
    border-top: 1px #ccc solid;
}

.nav {
  display: none;
}

.nav a {
  color: #ffffff;
  text-decoration: none;
  padding: 20px 30px;
}

.nav a:link, .nav a:visited {
  display: block;
    color: #ffffff;
    background-color: #000000;
    font-weight: bold;
    text-align: left;
    text-decoration: none;
    padding: 12px;
}

.nav a:hover, .nav a:active {
  background-color: #363636;
}

.menu-trigger {

  color: #ffffff;
  text-decoration: none;
  font-size: 1.75em;
  width: 2em;
  margin-left: 10px;
}

.body a {
  display: flex;
  justify-content: space-between;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-left: 20px;
  margin-right: 20px;
  padding: 20px;
  list-style: none;
  background-color: #f0f0f0;
}

.container img {
  width: auto;
  max-width: 100%;
  height: auto;
}

.responsive {
  width: 100%;
  height: auto;
}

.item-1 {
  display: none;
}

.item-2 {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  border-bottom: 1px solid black;
  margin-bottom: 10px;
}

h4 {
  font-size: 1.5rem;
  margin-top: 10px;
  margin-bottom: 0;
}

.item-2 a {
  color: #000000;
  text-decoration: none;
}

.item-2 a:hover, .nav a:active {
  color: #F1B82D;
}

.item-3 {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  border-bottom: 1px solid black;
  margin-bottom: 10px;
}

h5 {
  font-size: 1.5rem;
  margin-top: 10px;
  margin-bottom: 0;
}

.item-3 a {
  color: #000000;
  text-decoration: none;
}

.item-3 a:hover, .nav a:active {
  color: #F1B82D;
}

.item-4 {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  margin-bottom: 10px;
}

h6 {
  font-size: 1.5rem;
  margin-top: 10px;
  margin-bottom: 0;
}

.item-4 a {
  color: #000000;
  text-decoration: none;
}

.item-4 a:hover, .nav a:active {
  color: #F1B82D;
}

.sidebar-1 li {
  list-style-type: none;
	width: 200px;
	height: 275px;
}

.flex-item-3 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #696969;
  margin-bottom: 10px;
}

.flex-item-4 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #696969;
}

.sidebar-2 li {
  list-style-type: none;
}

.footer {
  background-color: #F1B82D;
  font-family: Georgia, "Times New Roman", sans-serif;
  font-size: 0.8em;
  border-top: 1px solid black;
  margin-right: 20px;
  margin-left: 20px;
  padding-bottom: 1px;
  padding-left: 10px;
}

.blurbContainer {
    position: absolute;
    padding: auto;
    margin: auto;
}
.mySlides {
    float: right;
}

.flex-item-1, .flex-item-2 {
  max-width: 200px;
}

@media (max-width: 200px) {
  br {
    display: none;
  }
}

@media (min-width: 550px) {
  br {
    display: none;
  }

  .item-2 img {
    max-width: 450px;
  }

  .item-3 img {
    max-width: 450px;
  }

  .item-4 img {
    max-width: 450px;
  }

  .sidebar-2 img {
    max-width: 200px;
  }

}

@media (min-width: 800px) {
  .item-1 {
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
  }

  .item-1 img {
    display: flex;
    justify-content: flex-start;
    max-width: 200px;
  }

  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 25px;
  }

  h3 {
    font-size: 1.5rem;
    font-weight: bold;
    text-decoration: none;
  }

  .media-body-1 {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-left: 20px;
  }

  .media-body-1 button {
    padding: 10px;
    font-size: 15px;
  }

  .container {
    display: grid;
    grid-template columns: 1fr 1fr;
    grid-gap: 20px;
    grid-template-areas:
        "a c"
        "a c"
        "a b"
        "a b"
  }

  .body {
    grid-area: a;
  }

  .sidebar-1 {
    grid-area: b;
  }

  .sidebar-2 {
    grid-area: c;
  }

  .nav {
    display: flex;
    justify-content: space-around;
    padding: 10px;
  }

  .nav li {
    border-top: none;
  }

  .menu-trigger {
  display: none;

}

@media (min-width: 1000px) {

  .container {
    display: grid;
    grid-template columns: 3fr 1fr;
    grid-gap: 20px;
    grid-template-areas:
        "a a a c"
        "a a a c"
        "a a a b"
        "a a a b"
  }

  h1 {
    font-size: 50px;
  }

  h2 {
    font-size: 40px;
  }

  .nav {
    display: flex;
    justify-content: space-around;
    padding: 10px;
  }

  .nav li {
    border-top: none;
  }

  .menu-trigger {
  display: none;
}
}

